pagination optimization, some light mode dark mode fixes

--- a/assets/scss/_dark-mode.scss
+++ b/assets/scss/_dark-mode.scss
@@ -2,6 +2,9 @@ html {
   &.is-dark-mode-active {
     background-color: $dark-mode-background-color;
 
+    .itemLinkWithInspector{
+      color: lighten($blue,50%);
+    }
     .navbar {
       // background: $dark-mode-background-color !important;
 
